--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           onStoredChunk: (bytes) => showMessage(`> 🛰 sent ${bytes.toLocaleString()} bytes to web3.storage`)
         })
         showMessage(`> ✅ web3.storage now hosting ${cid}`)
-        showLink(`https://dweb.link/ipfs/${cid}`)
+        showLink(`https://crustwebsites.net/ipfs/${cid}`)
       }, false)
 
       function showMessage (text) {
